# sdf-hints

./: .gitignore  CHANGELOG.md  Makefile  README.md
backend/: README.md  pyproject.toml
backend/sdf_labeler_api/: __init__.py  app.py  config.py
backend/sdf_labeler_api/models/: __init__.py  constraints.py  pockets.py  point_cloud.py  project.py  samples.py
backend/sdf_labeler_api/services/: __init__.py  constraint_service.py  pocket_service.py  pointcloud_service.py  project_service.py  sampling_service.py  scenarios_service.py
backend/sdf_labeler_api/storage/: __init__.py
backend/sdf_labeler_api/survi_bridge/: __init__.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_constraint_service.py  test_pocket_service.py  test_pointcloud_service.py  test_project_service.py  test_ray_carve_sampling.py  test_sampling_service.py  test_survi_bridge.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: box-debug.spec.ts  brush.spec.ts  debug-box.spec.ts  fixtures.ts  live-debug.spec.ts  live-test.spec.ts  modes.spec.ts  primitives.spec.ts  projects.spec.ts  samples.spec.ts  seeds.spec.ts  ui-primitives-test.spec.ts  upload.spec.ts  ux-revamp.spec.ts  workflow.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/hooks/: useConstraintSync.test.tsx  useConstraintSync.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLocalSpacing.test.ts  useLocalSpacing.ts  usePointCloudBVH.ts
(+50 files in other folders)
