# ABOUTME: Backend package configuration for sdf-labeler API
# ABOUTME: FastAPI service for SDF training data labeling

[project]
name = "sdf-labeler-api"
version = "0.1.0"
description = "Backend API for interactive SDF training data generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "trimesh>=4.0.0",
    "laspy[laszip]>=2.5.0",
    "pyarrow>=14.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    # Scenario datasets
    "surface-scenarios[mesh]>=0.3.0",
    "trenchfoot>=0.2.3",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdf_labeler_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["sdf_labeler_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
]
